store/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: store.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: store-cluster-ip-service
                port:
                  number: 3008
